# pg_bitemporal

./: LICENSE  Makefile  README.md  bitemporal.md  circle.yml  relationships.sql.lit
.circleci/: config.yml
docs/: bi_temporal_2Q_PG_Conf_2019.pptx  bi_temporal_PG_Open_2017.pptx  bitemporal.md  interval.html  metadata.md  pg_bitemporal_reference.md  relationships.sql.md
model/: Main.hs  bitemporal.cabal  stack.yaml
model/src/: TemporalRelationships.hs  bitemporal.hs
sql/: RI_BT_FKey_check_ins.sql  RI_BT_FKey_check_ins_device_id.sql  _load_all.sql  bitemporal_internal_schema.sql  extensions.sql  generate_validation_function.sql  get_column_type.sql  l_generate_fk_trigger.sql  ll_add_fk.sql  ll_bitemporal_correction.sql  ll_bitemporal_correction_hist.sql  ll_bitemporal_correction_select.sql  ll_bitemporal_delete.sql  ll_bitemporal_delete_select.sql  ll_bitemporal_inactivate.sql  ll_bitemporal_inactivate_select.sql  ll_bitemporal_insert.sql  ll_bitemporal_insert_select.sql  ll_bitemporal_list_of_fields.sql  ll_bitemporal_list_of_fields_excl_effective.sql  ll_bitemporal_update.sql  ll_bitemporal_update_select.sql  ll_check_bitemporal_update_conditions.sql  ll_create_bitemporal_table.sql  ll_generate_bitemp_for_schema.sql  ll_generate_fk_trigger_function.sql  ll_generate_fk_validate.sql  ll_is_bitemporal_table.sql  ll_lookup_validation_function.sql  metadata.sql  relationships.sql  t_RI_bt_insert.sql  validate_bitemporal_pk_uq.sql
tests/: 00_pgtap_working.sql  05_ll_functions.sql  06_privs.sql  10_relationships.sql  15_metadata.sql  16_metadata.sql  20_ll_update.sql
tutorial/: bitemp_tutorial.sql  bt_tutorial.pptx
