name:          bitemporal

version:             1.0.0.0
synopsis:            Bitemporal model

license:             AllRightsReserved
-- license-file:        LICENSE
author:              Chad Slaughter
maintainer:          chad@scalegenius.com
copyright:           2015 (c) Scale Genius, Inc
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable bitemporal-model
  main-is:             bitemporal.hs
  hs-source-dirs:      src
  other-extensions:    OverloadedStrings
  build-depends:       base           >=4.8 && <4.10
                     , bytestring     >=0.10 && <0.11
                     , containers     >=0.5 && <0.6
                     , regex-compat >=0.95
                     , text          >= 1.2
                     , unix          >= 2.6
                     , process       >= 1.1
                     , fclabels      >= 2.0
                     , formatting        >= 6.2.2
                     , ansi-terminal  >= 0.6
  default-language:    Haskell2010

  
-- library
--   exposed-modules:     Action, Target, Iptables, ConfigFile
--   -- other-extensions:    OverloadedStrings
--   hs-source-dirs:      lib
--   default-language:    Haskell2010
--   build-depends:       base           >=4.8 && <4.10
--                      , bytestring     >=0.10 && <0.11
--                      , containers     >=0.5 && <0.6
--                      , text          >= 1.2
--                      , fclabels      >= 2.0
--                      , netlink
--                      , formatting        >= 6.2.2
--                      , parse-bash-configs
--                      , ip-types
-- 

test-suite tests
  type:           exitcode-stdio-1.0
  main-is:        test_main.hs
  hs-source-dirs: tests
  ghc-options:   -threaded
  default-language: Haskell2010
  build-depends:       base           >=4.8 && <4.10
                     , QuickCheck     >= 2.7
                     , HUnit          >= 1.3 
                     , hspec          >= 1.9
                     , tasty          >= 0.7 
                     , tasty-quickcheck >= 0.8.4
                     , tasty-hunit      >= 0.9.2
                     , tasty-hspec     >=1.1.2
                     , bytestring     >=0.10 && <0.11
                     , containers     >=0.5 && <0.6
                     , fclabels      >= 2.0
                     , unix          >= 2.6
