name:          bitemporal

version:             1.0.0.0
synopsis:            Bitemporal model

license:             AllRightsReserved
-- license-file:        LICENSE
author:              Chad Slaughter
maintainer:          chad@scalegenius.com
copyright:           2016-2017 (c) Scale Genius, Inc
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable bitemporal-model
   default-language:    Haskell2010
   main-is:             bitemporal.hs
   hs-source-dirs:      src
   other-modules: TemporalRelationships
   other-extensions:    OverloadedStrings
   build-depends:       base           >=4.8 && <4.10
                      , bytestring     >=0.10 && <0.11
--                      , regex-compat >=0.95
                      , unix          >= 2.6
--                      , process       >= 1.1
--                      , fclabels      >= 2.0
--                      , formatting        >= 6.2.2
--                     , ansi-terminal  >= 0.6
                     , QuickCheck
                     , containers
                     , text >= 1.2.2
                     , bytestring >= 0.10.6
                     , yaml >= 0.8.15

-- executable data-model
--   default-language:    Haskell2010
--  hs-source-dirs:      .
--  main-is:             Main.hs
--  ghc-options:         -Wall -O4 -funbox-strict-fields -fprof-auto -dcore-lint -rtsopts -with-rtsopts=-T -with-rtsopts=-s 
--  build-depends:       base >=4.8 && <4.9
----                     , aeson, filepath
--                     , QuickCheck
--                     , containers
--                     , text >= 1.2.2
--                     , bytestring >= 0.10.6
--                     , yaml >= 0.8.15
----                     , postgresql-simple >= 0.5
----                     , formatting    >= 0.3.1.1
----                     , raw-strings-qq
----                     , cmdargs  >= 0.10

test-suite tests
  type:           exitcode-stdio-1.0
  main-is:        test_main.hs
  hs-source-dirs: tests
  ghc-options:      -threaded
  default-language: Haskell2010
  build-depends:       base           >=4.8 && <4.10
                     , bytestring     >=0.10.6 && <0.11
                     , text >= 1.2.2
                     , containers     >=0.5 && <0.6
                     , QuickCheck     >= 2.7
                     , HUnit          >= 1.3 
                     , hspec          >= 1.9
                     , tasty          >= 0.7 
                     , tasty-quickcheck >= 0.8.4
                     , tasty-hunit      >= 0.9.2
                     , tasty-hspec     >=1.1.2
